[gd_scene load_steps=4 format=3 uid="uid://udp8wjqxtmw0"]

[ext_resource type="Script" path="res://scripts/laser.gd" id="1_air1d"]
[ext_resource type="Texture2D" uid="uid://xchvn3layomo" path="res://assets/bullets/laser_long.png" id="2_hws1c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nb6af"]
size = Vector2(1928, 29)

[node name="Laser" type="Node2D"]
script = ExtResource("1_air1d")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(964, 1)
scale = Vector2(0.942731, 0.982072)
texture = ExtResource("2_hws1c")

[node name="Laser" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Laser"]
position = Vector2(964, 0.5)
shape = SubResource("RectangleShape2D_nb6af")

[node name="LaserTime" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="timeout" from="LaserTime" to="." method="_on_laser_time_timeout"]
